src/assets/styles.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@theme {
  /* Font families */
  --font-sans: "InterVariable", ui-sans-serif, system-ui, sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-mono: "Fira Code", "Fira Mono", "Courier New", monospace;

  /* Theme */
  --bg-light: #d6d5d5;
  --bg-dark: #1a1a1a;
  --text-color-light: #213547;
  --text-color-dark: #d1d5db;
  --pattern-color-light: #2135472d;
  --pattern-color-dark: #d1d5db0c;
  /* --gradient-color-start: #42d392;
  --gradient-color-end: #647eff; */
}

@layer base {
  body {
    padding-bottom: 5rem;
    color: var(--text-color-light);
    background-color: var(--bg-light);
  }

  .dark body {
    color: var(--text-color-dark);
    background-color: var(--bg-dark);
  }
}

@layer components {
  .nav-link {
    @apply flex flex-col justify-center items-center w-full py-2 cursor-pointer;
  }

  .text-hover {
    @apply dark:hover:text-green-300 hover:text-green-500 transition-colors duration-300 ease-in-out;
  }

  /* border-color (same as tiny in utility) but there is bg (1px divs as devider lines)*/
  .border-color {
    @apply border-slate-400 dark:border-slate-600;
  }
}

@layer utilities {
  .flex-center {
    @apply flex justify-center items-center;
  }

  /* tiny text and border color (1px divs as divider lines) */
  .tiny-border {
    @apply bg-slate-400 dark:bg-slate-600;
  }

  .text-tiny {
    @apply text-[0.6rem] leading-[0.5rem] font-mono dark:text-green-300 text-green-500;
  }

  .rotate-270 {
    transform: rotate(deg);
  }

  .text-orientation {
    writing-mode: vertical-rl; /* Text flows top to bottom, right to left */
    text-orientation: upright; /* Letters remain horizontal */
    letter-spacing: -2px; /* Adjust letter spacing for better readability */
  }
  @media (min-width: 640px) {
    .text-orientation {
      writing-mode: horizontal-tb; /* Text flows left to right */
      text-orientation: mixed; /* Letters remain horizontal */
      letter-spacing: 0.4px;
    }
  }

  .text-upright {
    writing-mode: vertical-rl; /* Text flows top to bottom, right to left */
    text-orientation: upright; /* Letters remain horizontal */
    letter-spacing: -2px;
  }

  /* fading animation */
  .fade-enter-from {
    @apply opacity-0 translate-y-2;
  }
  .fade-enter-to {
    @apply opacity-100 translate-y-0;
  }
  .fade-enter-active {
    @apply transition duration-200 ease-out;
  }

  .fade-leave-from {
    @apply opacity-100 translate-y-0;
  }
  .fade-leave-to {
    @apply opacity-0 translate-y-2;
  }
  .fade-leave-active {
    @apply transition duration-150 ease-in;
  }
}
/* Hide buffer label on small screens */
@media (max-width: 1419px) {
  .hide-under-1420 {
    display: none !important;
  }
}

/* Navbar setup so no overlap on content */
@media (min-width: 640px) {
  body {
    padding-bottom: 0;
    padding-left: 76px; /* 75px is the width of the navbar */
  }
}

